# crypto-quant

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  api.py  backfill.py  backfill_ethena.py  backfill_futures.py  carry.py  carry_eval.py  config.py  consumer_metrics.py  consumer_questdb.py  dataset.py  docker-compose.yml  ethena_eval.py  evaluate.py  model.py  producer.py  pyproject.toml  qdb_sink.py  requirements-app.txt  requirements-dev.txt  requirements.txt  run_questdb.sh  sources.py  stream_print.py  watchdog.py
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: Chart.tsx  Terminal.tsx
dashboard/lib/: api.ts
docs/: research.md
legacy/: ingest.py
tests/: test_api.py  test_backfill_ethena.py  test_backfill_futures.py  test_carry.py  test_carry_eval.py  test_dataset.py  test_ethena_eval.py  test_evaluate.py  test_model.py  test_parsers.py  test_qdb_sink.py  test_watchdog.py
